@@ -1,3 +1,3 @@
 @ECHO OFF
-java -jar design.jar
+java --module-path "javafx-sdk-16\lib" --add-modules javafx.controls,javafx.fxml --add-modules javafx.controls -jar Design.jar
 PAUSE
